Theming: search results

--- a/src/Presentation/SmartStore.Web/Views/Common/ShopBar.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Common/ShopBar.cshtml
@@ -31,10 +31,10 @@
             <div class="shopbar-tool hidden-sm-down" id="shopbar-wishlist" data-target="#wishlist-tab">
                 <a class="navbar-toggler shopbar-button" data-toggle="offcanvas" data-summary-href="@Url.Action("ShoppingCartSummary", "ShoppingCart", new { isWishlist = true })"
                    data-autohide="true" data-placement="right" data-fullscreen="false" data-disablescrolling="true" data-target="#offcanvas-cart">
-                    <figure class="shopbar-button-icon">
+                    <span class="shopbar-button-icon">
                         <i class="fa fa-heart-o"></i>
                         <span class='label @(GetThemeVariable<string>("ShopBarLabel")) @(Model.WishlistItems == 0 ? "hidden-xs-up" : "")' data-bind-to="TotalProducts">@Model.WishlistItems</span>
-                    </figure>
+                    </span>
                     <span class="shopbar-button-label hidden-lg-down">
                         <span>@T("Common.Shopbar.WishlistPartOne")</span><br />
                         <span style="font-weight: bold">@T("Common.Shopbar.WishlistPartTwo")</span>
@@ -46,10 +46,10 @@
             <div class="shopbar-tool hidden-sm-up" id="shopbar-wishlist" data-target="#wishlist-tab">
                 <a class="navbar-toggler shopbar-button" data-toggle="offcanvas" data-summary-href="@Url.Action("ShoppingCartSummary", "ShoppingCart", new { isWishlist = true })"
                    data-autohide="true" data-placement="right" data-fullscreen="true" data-disablescrolling="true" data-target="#offcanvas-cart">
-                    <figure class="shopbar-button-icon">
+                    <span class="shopbar-button-icon">
                         <i class="fa fa-heart-o"></i>
                         <span class='label @(GetThemeVariable<string>("ShopBarLabel")) @(Model.WishlistItems == 0 ? "hidden-xs-up" : "")' data-bind-to="TotalProducts">@Model.WishlistItems</span>
-                    </figure>
+                    </span>
                 </a>
             </div>
         }
@@ -63,10 +63,10 @@
             <div class="shopbar-tool hidden-sm-down" id="shopbar-compare" data-target="#compare-tab">
                 <a class="navbar-toggler shopbar-button" data-toggle="offcanvas" data-summary-href="@Url.Action("CompareSummary", "Catalog")"
                    data-autohide="true" data-placement="right" data-fullscreen="false" data-disablescrolling="true" data-target="#offcanvas-cart">
-                    <figure class="shopbar-button-icon">
+                    <span class="shopbar-button-icon">
                         <i class="fa fa-retweet"></i>
                         <span class='label @(GetThemeVariable<string>("ShopBarLabel")) @(Model.CompareItems == 0 ? "hidden-xs-up" : "")' data-bind-to="Count">@Model.CompareItems</span>
-                    </figure>
+                    </span>
                     <span class="shopbar-button-label hidden-lg-down">
                         <span>@T("Common.Shopbar.CompareProductsPartOne")</span><br />
                         <span style="font-weight: bold">@T("Common.Shopbar.CompareProductsPartTwo")</span>
@@ -78,10 +78,10 @@
             <div class="shopbar-tool hidden-sm-up" id="shopbar-compare" data-target="#compare-tab">
                 <a class="navbar-toggler shopbar-button" data-toggle="offcanvas" data-summary-href="@Url.Action("CompareSummary", "Catalog")"
                    data-autohide="true" data-placement="right" data-fullscreen="true" data-disablescrolling="true" data-target="#offcanvas-cart">
-                    <figure class="shopbar-button-icon">
+                    <span class="shopbar-button-icon">
                         <i class="fa fa-retweet"></i>
                         <span class='label @(GetThemeVariable<string>("ShopBarLabel")) @(Model.CompareItems == 0 ? "hidden-xs-up" : "")' data-bind-to="Count">@Model.CompareItems</span>
-                    </figure>
+                    </span>
                 </a>
             </div>
         }
@@ -92,12 +92,12 @@
             <div class="shopbar-tool hidden-sm-down" id="shopbar-cart" data-target="#cart-tab">
                 <a class="navbar-toggler shopbar-button" data-toggle="offcanvas" data-summary-href="@Url.Action("ShoppingCartSummary", "ShoppingCart")"
                         data-autohide="true" data-placement="right" data-fullscreen="false" data-disablescrolling="true" data-target="#offcanvas-cart">
-                    <figure class="shopbar-button-icon">
+                    <span class="shopbar-button-icon">
                         <i class="fa fa-shopping-basket"></i>
                         <span class='label label-pill @(GetThemeVariable<string>("ShopBarLabel"))@(Model.ShoppingCartItems == 0 ? " hidden-xs-up" : "")' data-bind-to="TotalProducts">
                             @Model.ShoppingCartItems
                         </span>
-                    </figure>
+                    </span>
                     <span class="shopbar-button-label hidden-lg-down">
                         <span data-bind-to="SubTotal">@Model.ShoppingCartAmount</span><br />
                         <span style="font-weight: bold">@T("Common.Shopbar.Basket") <i class="fa fa-caret-down"></i></span>
@@ -109,12 +109,12 @@
             <div class="shopbar-tool hidden-sm-up" id="shopbar-cart" data-target="#cart-tab">
                 <a class="navbar-toggler shopbar-button" data-toggle="offcanvas" data-summary-href="@Url.Action("ShoppingCartSummary", "ShoppingCart")"
                    data-autohide="true" data-placement="right" data-fullscreen="true" data-disablescrolling="true" data-target="#offcanvas-cart">
-                    <figure class="shopbar-button-icon">
+                    <span class="shopbar-button-icon">
                         <i class="fa fa-shopping-basket"></i>
                         <span class='label label-pill @(GetThemeVariable<string>("ShopBarLabel"))@(Model.ShoppingCartItems == 0 ? " hidden-xs-up" : "")' data-bind-to="TotalProducts">
                             @Model.ShoppingCartItems
                         </span>
-                    </figure>
+                    </span>
                 </a>
             </div>
         }
