--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/_misc.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/_misc.scss
@@ -40,8 +40,8 @@ h1, h2, h3, h4, h5, h6,
 }
 
 // delivery times
+// TODO: (mc) Remove this later
 .delivery-time {
-	text-align: center;
 	padding-bottom: 5px;
 	@include smaller();
 	.delivery-time-label {
@@ -55,6 +55,19 @@ h1, h2, h3, h4, h5, h6,
         border: 1px solid rgba(0,0,0, .25);
         background-image: url('images/deliv-bg-aero.png');
 	}
+}
+
+.delivery-time {
+    display: inline-block;
+    color: $brand-danger;
+    vertical-align: middle;
+    max-width: 100%;
+    @include text-truncate();
+
+    .delivery-time-status {
+        padding-right: 0.2rem;
+        font-size: 0.85em;
+    }
 }
 
 //
