--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/theme.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/theme.scss
@@ -83,6 +83,7 @@ $card-border-color:         rgba(0,0,0, 0.12);*/
 @import "_pages.scss";
 @import "_login.scss";
 @import "_rating.scss";
+@import "_artlist.scss";
 @import "_product.scss";
 @import "_cart.scss";
 @import "_megamenu.scss";
